--- a/src/main/resources/templates/colaboracoes.html
+++ b/src/main/resources/templates/colaboracoes.html
@@ -13,21 +13,20 @@
 
 <style>
 body {
-	background-color: black;
+	background-color: white;
 	text-align: center;
-	color: white;
+	color: black;
 	font-family: Arial, Helvetica, sans-serif;
 }
 </style>
 </head>
 <body>
 
-	<div th:replace="base/layout :: header">
-	</div>
+	<div th:replace="base/layout :: header"></div>
 
-		<br>
+	<br>
 
-		<div class="d-flex justify-content-center">
+	<!-- 		<div class="d-flex justify-content-center">
 			<form action="/colaboracoes" method="get">
 				<div class="d-flex justify-content-center">
 					<label for="nome">Usuário: </label> <input name="user" />
@@ -40,23 +39,43 @@ body {
 				<br>
 				<button type="submit">Buscar</button>
 			</form>
-		</div>
+		</div> -->
 
-		<div class="d-flex justify-content-center">
-			<table>
-				<th:block th:each="colaboracao : ${listaColaboracoes}">
-					<tr>
-						<td th:text="' Usuário: ' + ${colaboracao?.usuario + ' &nbsp;'}">...</td>
-						<td
-							th:text="' Commits:  ' +  ${colaboracao?.contribuicoes} + ' commit(s)'">...</td>
-					</tr>
-				</th:block>
-			</table>
-		</div>
 
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-			crossorigin="anonymous"></script>
+	<br>
+	<div class="d-flex justify-content-center">
+		<form th:action="@{github/colaboracoes}" method="get">
+			<div class="d-flex justify-content-center">
+				<label for="nome">Usuário: </label> &nbsp;<input name="user" />
+			</div>
+			<br>
+			<div class="d-flex justify-content-center">
+				<label for="repositorio">Repositório: </label> &nbsp;<input
+					name="nomeRepositorio" />
+			</div>
+			<br>
+			<button type="submit">Buscar</button>
+		</form>
+	</div>
+
+	<br>
+
+
+	<div class="d-flex justify-content-center">
+		<table>
+			<th:block th:each="colaboracao : ${listaColaboracoes}">
+				<tr>
+					<td th:text="' Usuário: ' + ${colaboracao?.usuario + ' &nbsp;'}">...</td>
+					<td
+						th:text="' Commits:  ' +  ${colaboracao?.contribuicoes} + ' commit(s)'">...</td>
+				</tr>
+			</th:block>
+		</table>
+	</div>
+
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+		crossorigin="anonymous"></script>
 </body>
 </html>
