--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,12 +19,52 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 </style>
+
+<script src="https://www.google.com/jsapi"></script>
+
+<script type="text/javascript" th:inline="javascript"> 
+
+        // Load the Visualization API and the corechart package.
+        google.charts.load('current', {'packages':['corechart']});
+
+        // Set a callback to run when the Google Visualization API is loaded.
+        google.charts.setOnLoadCallback(drawChart);
+
+        // Callback that creates and populates a data table,
+        // instantiates the pie chart, passes in the data and
+        // draws it.
+        function drawChart() {
+
+            // Create the data table.
+/*             var data = new google.visualization.DataTable();
+            data.addColumn('string', 'Topping');
+            data.addColumn('number', 'Slices');
+            data.addRows([[${chartData}]]); 
+*/
+            var data = new google.visualization.DataTable();
+            data.addColumn('string', 'Topping');
+            data.addColumn('number', 'Slices');
+            data.addRows([
+                /*[# th:each="row : ${chartData}"]*/
+                [[${row}]],
+                /*[/]*/
+            ]);
+            
+            // Set chart options
+            var options = {'title':'Porcentagem de repositorio por linguagens',
+                'width':400,
+                'height':300};
+
+            // Instantiate and draw our chart, passing in some options.
+            var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+            chart.draw(data, options);
+        }
+    </script>
+
 </head>
 <body>
 
-<div th:replace="base/layout :: header">
-	
-</div>
+	<div th:replace="base/layout :: header"></div>
 
 	<br>
 	<div class="d-flex justify-content-center">
@@ -38,6 +78,7 @@ body {
 
 	<span
 		th:text="${listaPorcentagens != null} ? ${listaPorcentagens[0].usuario} : ''"></span>
+
 
 	<div class="d-flex justify-content-center">
 		<table>
@@ -53,40 +94,13 @@ body {
 		</table>
 	</div>
 
-<!-- 	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+	<button class="btn btn-danger navbar-btn"
+		onclick="drawChart(new google.visualization.PieChart(document.getElementById('chart_div')))">Button</button>
 
-	<div class="d-flex justify-content-center">
-		<form action="/index" method="get">
-			<div class="d-flex justify-content-center">
-				<label for="nome">Usuário: </label> <input name="user" />
-			</div>
-			<br>
-			<div class="d-flex justify-content-center">
-				<label for="repositorio">Repositório: </label> <input
-					name="nomeRepositorio" />
-			</div>
-			<br>
-			<button type="submit">Buscar</button>
-		</form>
-	</div>
 
-	<div class="d-flex justify-content-center">
-		<table>
-			<th:block th:each="colaboracao : ${listaColaboracoes}">
-				<tr>					
-					<td
-						th:text="' Usuário: ' + ${colaboracao?.usuario + ' &nbsp;'}">...</td>
-					<td th:text="' Commits:  ' +  ${colaboracao?.contribuicoes} + ' commit(s)'">...</td>
-				</tr>
-			</th:block>
-		</table>
-	</div> -->
+	<div id="chart_div"></div>
+
+
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
