--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,14 +13,13 @@
 
 <style>
 body {
-	background-color: white;
+	background-color: black;
 	text-align: center;
-	color: black;
+	color: white;
 	font-family: Arial, Helvetica, sans-serif;
 }
 </style>
 
-<<<<<<< HEAD
 <script src="https://www.google.com/jsapi"></script>
 
 <script type="text/javascript" th:inline="javascript"> 
@@ -62,28 +61,15 @@ body {
         }
     </script>
 
-=======
->>>>>>> refs/heads/apiWeb_requests
 </head>
 <body>
 
 	<div th:replace="base/layout :: header"></div>
-<<<<<<< HEAD
-=======
-
-	<!-- 	<form th:action="@{github/resetPassword}" method="get">
-    <input th:name="email" th:placeholder="Email" />
-    <div class="clearfix">
-        <button type="submit">Reset</button>
-    </div>
-</form> -->
-
->>>>>>> refs/heads/apiWeb_requests
 
 	<br>
 	<div class="d-flex justify-content-center">
-		<form th:action="@{github/porcentagens}" method="get">
-			<label for="user">Usuário: </label> <input name="user" />
+		<form action="/index" method="get">
+			<label for="nome">Usuário: </label> <input name="user" />
 			<button type="submit">Buscar</button>
 		</form>
 	</div>
@@ -108,19 +94,13 @@ body {
 		</table>
 	</div>
 
-<<<<<<< HEAD
 	<button class="btn btn-danger navbar-btn"
 		onclick="drawChart(new google.visualization.PieChart(document.getElementById('chart_div')))">Button</button>
-=======
->>>>>>> refs/heads/apiWeb_requests
 
-<<<<<<< HEAD
 
 	<div id="chart_div"></div>
 
 
-=======
->>>>>>> refs/heads/apiWeb_requests
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
