--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,9 +13,9 @@
 
 <style>
 body {
-	background-color: black;
+	background-color: white;
 	text-align: center;
-	color: white;
+	color: black;
 	font-family: Arial, Helvetica, sans-serif;
 }
 </style>
@@ -94,12 +94,12 @@ body {
 		</table>
 	</div>
 
-	<button class="btn btn-danger navbar-btn"
+<!-- 	<button class="btn btn-danger navbar-btn"
 		onclick="drawChart(new google.visualization.PieChart(document.getElementById('chart_div')))">Button</button>
-
-
-	<div id="chart_div"></div>
-
+ -->
+	<div class="d-flex justify-content-center">
+		<div id="chart_div"></div>
+	</div>
 
 
 	<script
