--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,7 +62,7 @@ body {
     </script>
 
 </head>
-<body>
+<body th:erroFuncao="${errorMessage}" th:onload="SweetAlertErro()">
 
 	<div th:replace="base/layout :: header"></div>
 
@@ -93,14 +93,48 @@ body {
 			</th:block>
 		</table>
 	</div>
-
+	
 <!-- 	<button class="btn btn-danger navbar-btn"
 		onclick="drawChart(new google.visualization.PieChart(document.getElementById('chart_div')))">Button</button>
+		th:attr="onclick=|SweetAlertErro('Atenção','${errorMessage}')|"
  -->
 	<div class="d-flex justify-content-center">
 		<div id="chart_div"></div>
 	</div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous"></script>
+	
+	<script type="text/javascript">
+		function isEmpty(str) {
+		    return (!str || 0 === str.length);
+		}	
+	
+		function SweetAlertErro()
+		{	
+			var erro = document.querySelectorAll('body')[0].getAttribute('erroFuncao');
+			
+			if(isEmpty(erro) == false)
+			{	
+				swal({
+					  title: 'Atenção',
+					  text: erro,
+					  icon: "error",
+					  dangerMode: false,
+					});
+			}
+		}
+		
+		function SweetAlertSucesso(titulo,textoConteudo)
+		{	
+			swal({
+				  title: titulo,
+				  text: textoConteudo,
+				  icon: "success",
+				  dangerMode: false,
+				});
+		}
+		
+	</script>
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
