--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,11 +60,6 @@ body {
             chart.draw(data, options);
         }
     </script>
-    
-<!--     	<script
-		src="scripts/sweetalert.js"></script> -->
-		<Script type="text/javascript" th:src="@{/scripts/sweetalert.js}"></Script>
-		
 
 </head>
 <body th:erroFuncao="${errorMessage}" th:onload="SweetAlertErro()">
@@ -120,7 +115,7 @@ body {
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous"></script>
 	
-<!-- 	<script type="text/javascript">
+	<script type="text/javascript">
 		function isEmpty(str) {
 		    return (!str || 0 === str.length);
 		}	
@@ -150,7 +145,7 @@ body {
 				});
 		}
 		
-	</script> -->
+	</script>
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
