Refactor para a consulta de colaborações

--- a/src/main/resources/templates/colaboracoes.html
+++ b/src/main/resources/templates/colaboracoes.html
@@ -20,7 +20,7 @@ body {
 }
 </style>
 </head>
-<body>
+<body th:erroFuncao="${errorMessage}" th:onload="SweetAlertErro()">
 
 	<div th:replace="base/layout :: navbar"></div>
 
@@ -29,7 +29,7 @@ body {
 	<br>
 	<div class="d-flex justify-content-center">
 
-		<form th:action="@{github/colaboracoes}" method="get">
+		<form action="/colaboracoesPorUsuario" method="get">
 			<div class="row form-group">
 				<label for="nome">Usuário</label><input name="user" class="form-control"/>
 			</div>
@@ -52,13 +52,47 @@ body {
 		<table>
 			<th:block th:each="colaboracao : ${listaColaboracoes}">
 				<tr>
-					<td th:text="' Usuário: ' + ${colaboracao?.usuario + ' &nbsp;'}">...</td>
+					<td th:text="' Usuário: ' + ${colaboracao?.usuario}">...</td>
 					<td
-						th:text="' Commits:  ' +  ${colaboracao?.contribuicoes} + ' commit(s)'">...</td>
+						th:text="' Commits:  ' +  ${colaboracao?.contribuicoes}">...</td>
 				</tr>
 			</th:block>
 		</table>
 	</div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"
+	integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA=="
+	crossorigin="anonymous"></script>
+
+
+	<script type="text/javascript">
+        function isEmpty(str) {
+            return (!str || 0 === str.length);
+        }
+
+        function SweetAlertErro() {
+            var erro = document.querySelectorAll('body')[0].getAttribute('erroFuncao');
+
+            if (isEmpty(erro) == false) {
+                swal({
+                    title: 'Atenção',
+                    text: erro,
+                    icon: "error",
+                    dangerMode: false,
+                });
+            }
+        }
+
+        function SweetAlertSucesso(titulo, textoConteudo) {
+            swal({
+                title: titulo,
+                text: textoConteudo,
+                icon: "success",
+                dangerMode: false,
+            });
+        }
+
+    </script>
 
 
 	<script
