Hot fix para repositorios sem linguagem e telas amigaveis para interface mobile

--- a/src/main/resources/templates/repositorios.html
+++ b/src/main/resources/templates/repositorios.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GitWatchers - Repositorios</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -49,7 +50,7 @@
         <table>
             <th:block th:each="Repositorio : ${repositorios}">
                 <tr>
-                    <td><a th:href="@{'/colaboracoes?user=' + ${Repositorio?.donoRepos}+'&nomeRepositorio='+${Repositorio?.nome}}"
+                    <td><a th:href="@{'/colaboracoesPorUsuario?user=' + ${Repositorio?.donoRepos}+'&nomeRepositorio='+${Repositorio?.nome}}"
                             th:text="${Repositorio?.nome}" /></td>
                 </tr>
             </th:block>
