--- a/src/main/resources/templates/colaboracoes.html
+++ b/src/main/resources/templates/colaboracoes.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>GitWatchers</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -19,6 +20,8 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 </style>
+
+
 </head>
 <body th:erroFuncao="${errorMessage}" th:onload="SweetAlertErro()">
 
