--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>GitWatchers</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -110,7 +111,7 @@ body {
 		th:attr="onclick=|SweetAlertErro('Atenção','${errorMessage}')|"
  -->
 	<div class="d-flex justify-content-center">
-		<div id="chart_div"></div>
+		<div id="chart_div" style="margin-left: 23px;"></div>
 	</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous"></script>
