Ajustes na colaboração/repositorios + adição de graficos de commit na tela de colaborações

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@ body {
             ]);
             
             // Set chart options
-            var options = {'title':'Porcentagem de repositorio por linguagens',
+            var options = {'title':'Porcentagem de repositorios por linguagem e usuário',
                 'width':700,
                 'height':500};
 
