--- a/src/main/resources/templates/repositorios.html
+++ b/src/main/resources/templates/repositorios.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 
-<body th:erroFuncao="${errorMessage}" th:onload="SweetAlertErro()" l>
+<body th:erroFuncao="${errorMessage}" th:onload="SweetAlertErro()">
 
     <div th:replace="base/layout :: navbar"></div>
 
@@ -63,8 +63,8 @@
             var user = getParameterByName('user');
             var nomeRepositorio = getParameterByName('nomeRepositorio');
 
-            document.getElementById(user).innerText = user;
-            document.getElementById(nomeRepos).innerText = nomeRepositorio;
+            document.getElementById("user").innerText = user;
+            document.getElementById("nomeRepos").innerText = nomeRepositorio;
         };
 
 
@@ -89,34 +89,34 @@
         integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA=="
         crossorigin="anonymous"></script>
 
-    <script type="text/javascript">
-        function isEmpty(str) {
-            return (!str || 0 === str.length);
-        }
-
-        function SweetAlertErro() {
-            var erro = document.querySelectorAll('body')[0].getAttribute('erroFuncao');
-
-            if (isEmpty(erro) == false) {
+        <script type="text/javascript">
+            function isEmpty(str) {
+                return (!str || 0 === str.length);
+            }
+    
+            function SweetAlertErro() {
+                var erro = document.querySelectorAll('body')[0].getAttribute('erroFuncao');
+    
+                if (isEmpty(erro) == false) {
+                    swal({
+                        title: 'Atenção',
+                        text: erro,
+                        icon: "error",
+                        dangerMode: false,
+                    });
+                }
+            }
+    
+            function SweetAlertSucesso(titulo, textoConteudo) {
                 swal({
-                    title: 'Atenção',
-                    text: erro,
-                    icon: "error",
+                    title: titulo,
+                    text: textoConteudo,
+                    icon: "success",
                     dangerMode: false,
                 });
             }
-        }
-
-        function SweetAlertSucesso(titulo, textoConteudo) {
-            swal({
-                title: titulo,
-                text: textoConteudo,
-                icon: "success",
-                dangerMode: false,
-            });
-        }
-
-    </script>
+    
+        </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
