#27 implementado evento de click no chart de pizza na index

--- a/src/main/resources/templates/colaboracoes.html
+++ b/src/main/resources/templates/colaboracoes.html
@@ -44,8 +44,8 @@ body {
             data.addRows([[${chartData}]]); 
 */
             var data = new google.visualization.DataTable();
-            data.addColumn('string', 'Topping');
-            data.addColumn('number', 'Slices');
+            data.addColumn('string', 'Usuario');
+            data.addColumn('number', 'Commits');
             data.addRows([
                 /*[# th:each="row : ${chartData}"]*/
                 [[${row}]],
