--- a/src/main/resources/templates/base/layout.html
+++ b/src/main/resources/templates/base/layout.html
@@ -17,10 +17,10 @@
 
 	<div th:fragment="navbar">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand">GitWatchers</a>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<a class="navbar-brand" style="margin-left: 20px;">GitWatchers</a>
+			<div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavDropdown">
 				<ul class="navbar-nav">
-					<li class="nav-item active"><a class="nav-link" href="/">Home</a>
+					<li class="nav-item active"><a class="nav-link" href="/">Inicio</a>
 					</li>
 					<li class="nav-item"><a class="nav-link" href="/colaboracoes">Colaborações</a>
 					</li>
