--- a/src/main/resources/templates/base/layout.html
+++ b/src/main/resources/templates/base/layout.html
@@ -8,12 +8,97 @@
 
 </head>
 <body>
-
-	<!-- 	<div th:fragment="header">
-	
-		<a href="/">Porcentagens</a> - <a href="/colaboracoes">Colaborações</a>		
+	 	<div th:fragment="sidebar">
+			
+			<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<a class="navbar-brand" style="margin-left: 20px;">GitWatchers</a>
+				<div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavDropdown">
+					<ul class="navbar-nav">
+						<li class="nav-item active"><a class="nav-link" href="/">Inicio</a>
+						</li>
+						<li class="nav-item"><a class="nav-link" href="/colaboracoes">Colaborações</a>
+						</li>
+						<li class="nav-item"><a class="nav-link" href="/repositorios">Repositorios</a>
+						</li>
+						<li class="nav-item"><a class="nav-link" href="#">Em Breve...</a>
+						</li>
+						<li class="nav-item"><a class="nav-link" href="#">Em Breve...</a>
+						</li>
+					</ul>
+				</div>
+			</nav> -->
+			<div class="wrapper">
+				<!-- Sidebar Holder -->
+				<nav id="sidebar">
+					<div class="sidebar-header">
+						<h3>GitWatchers</h3>
+					</div>
+					<ul class="list-unstyled components">
+						<li>
+							<a href="/">Home</a>
+						</li>
 		
-	</div> -->
+						<li class="active">
+							<a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Páginas</a>
+							<ul class="collapse list-unstyled" id="homeSubmenu">
+								<li>
+									<a href="/">Home</a>
+								</li>
+								<li>
+									<a href="/colaboracoes">Colaborações</a>
+								</li>
+								<li>
+									<a href="/repositorios">Repositorios</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="#">Github</a>
+						</li>
+					</ul>
+				</nav>
+		
+				<!-- Page Content Holder -->
+				<div id="content">
+		
+					<nav class="navbar navbar-expand-lg navbar-light bg-light">
+						<div class="container-fluid">
+		
+							<button type="button" id="sidebarCollapse" class="navbar-btn">
+								<span></span>
+								<span></span>
+								<span></span>
+							</button>
+							<button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+								<i class="fas fa-align-justify"></i>
+							</button>
+		
+							<div class="collapse navbar-collapse" id="navbarSupportedContent">
+								<ul class="nav navbar-nav ml-auto">
+									<li class="nav-item active">
+										<a class="nav-link" href="/">Inicio</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link" href="#">Em breve...</a>
+									</li>
+		
+								</ul>
+							</div>
+						</div>
+					</nav>
+	
+					<!-- conteudo -->
+					<div class="page-content">
+	 
+						<!-- CONTEUDO A SER SUBSTITUÍDO -->
+						 <div layout:fragment="content">Essa parte vai ser substituída </div>
+				   </div>
+	
+				</div>
+			</div>
+		
+		</div>
+
 
 	<div th:fragment="navbar">
 		<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
